# memem

./: .dockerignore  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  bootstrap.sh  glama.json  llms.txt  pyproject.toml
.agents/plugins/: marketplace.json
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: .mcp.json  marketplace.json  plugin.json
.github/workflows/: ci.yml
cortex-mcp-server/: MEMORY_SCHEMA.md  assembly.py  benchmark.py  cli.py  embeddings.py  eval.py  mine-cron.sh  miner-daemon.py  miner-wrapper.sh  miner_protocol.py  mining.py  models.py  obsidian_store.py  operations.py  playbook.py  recall.py  search_index.py  security.py  server.py  session_state.py  starter_packs.py  storage.py  telemetry.py  transcripts.py
cortex_server/: __init__.py  assembly.py  capabilities.py  cli.py  eval.py  mine-cron.sh  miner-wrapper.sh  miner_daemon.py  mining.py  models.py  obsidian_store.py  operations.py  playbook.py  recall.py  search_index.py  server.py  session_state.py  storage.py  telemetry.py  transcripts.py
docs/: ab-report-v2.6.0.md  awesome-list-submissions.md  improvement-plan-2026-06.md
hooks/: auto-recall.sh  codex-hooks.json  hooks.json  post-stop-attribution.sh  pre-tool-use.sh  session-start.sh  stop-mine.sh
memem/: __init__.py  activation.py  active_slice.py  active_slice_engine.py  active_slice_metrics.py  artifact_context.py  assembly.py  attribution.py  boundaries.py  candidate_generation.py  capabilities.py  cli.py  compaction.py  consolidation.py  cross_encoder_rerank.py  cross_vault.py  decay.py  delta.py  delta_commit.py  delta_policy.py  dreamer.py  embedding_index.py  environment_context.py  eval.py  eval_capture.py  eval_replay.py  feedback.py  graph_index.py  haiku_prompts.py  io_utils.py  kind_classifier.py  lessons.py  migrate_layers.py  mine-cron.sh  mine_delta.py  miner-wrapper.sh  miner_circuit_breaker.py  miner_daemon.py  miner_errors.py  miner_protocol.py  (+28 more)
memem/eval/: __init__.py  canaries.py  eval_set.py
scripts/: ab_compare_engines.py  audit_dead_fields.py  backfill_layers.py  backfill_layers_llm.py  backfill_related.py  deprecate_low_quality.py  fix_permissions_audit.sh  identify_low_quality_memories.py  migrate_bitemporal.py  run_dreamer.sh  run_eval.py  slice_quality_probe.py  vault_dedup.py
skills/cortex/: SKILL.md
skills/cortex-doctor/: SKILL.md
skills/cortex-mine/: SKILL.md
skills/cortex-mine-history/: SKILL.md
skills/cortex-status/: SKILL.md
skills/memem/: SKILL.md
skills/memem-doctor/: SKILL.md
skills/memem-mine/: SKILL.md
skills/memem-mine-history/: SKILL.md
skills/memem-status/: SKILL.md
skills/memem-welcome/: SKILL.md
tests/: benchmark_18q.py  conftest.py  test_activation.py  test_activation_llm_fallback.py  test_activation_quality.py  test_active_slice.py  test_active_slice_continuity.py  test_active_slice_cosmetic_tensions.py  test_active_slice_end_to_end.py  test_active_slice_engine.py  test_active_slice_golden.py  test_active_slice_layered.py  test_active_slice_projection.py  test_active_slice_runtime.py  test_artifact_candidates.py  test_attribution.py  test_attribution_hook.py  test_b4_b22_embedding_freshness.py  test_bitemporal.py  test_bootstrap.py  test_boundaries.py  test_canaries.py  test_citation_attribution.py  test_cli.py  test_compaction.py  test_consolidation.py  test_context_assemble_compose.py  test_cross_encoder_rerank.py  test_decay.py  test_default_mode.py  test_delta.py  test_delta_commit.py  test_delta_policy.py  test_dreamer.py  test_dreamer_extended.py  test_episode_emission.py  test_eval.py  test_eval_replay.py  test_feedback.py  test_frontmatter_strict.py  (+87 more)
tests/fixtures/: real_session_sample.jsonl  reconcile_integration_synthetic.jsonl
