[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memem"
version = "0.10.2"
description = "Persistent, self-evolving memory for Claude Code — local-first, browsable Obsidian vault."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "TT-Wang"}
]
requires-python = ">=3.11"
keywords = ["memory", "context", "knowledge", "claude-code", "obsidian", "mcp", "persistent-memory"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0",
]

[project.scripts]
memem = "memem.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
]

[project.urls]
Homepage = "https://github.com/TT-Wang/memem"
Repository = "https://github.com/TT-Wang/memem"
Issues = "https://github.com/TT-Wang/memem/issues"
Changelog = "https://github.com/TT-Wang/memem/blob/master/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["memem"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "RET", "SIM"]
ignore = [
    "E501", "N806", "N803",
    "E402",   # module imports not at top — used for lazy/circular avoidance
    "E701",   # multiple statements on one line
    "B904",   # raise ... from err — style, not correctness
    "C401",   # set comprehension vs generator
    "SIM102", # nested-if readability preference
    "SIM105", # contextlib.suppress preference
    "SIM115", # context-handler preference
]

[tool.ruff.lint.per-file-ignores]
"memem/__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
