[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memem"
version = "1.7.2"
description = "Persistent, self-evolving memory for Claude Code — local-first, browsable Obsidian vault."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "TT-Wang"}
]
requires-python = ">=3.11"
keywords = ["memory", "context", "knowledge", "claude-code", "obsidian", "mcp", "persistent-memory"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0",
    "python-frontmatter>=1.0",
    "rapidfuzz>=3.0.0",
    "structlog>=24.0",
    "tenacity>=8.0",
]

[project.scripts]
memem = "memem.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    # ruff and mypy pinned to compatible-release (~=) rather than lower-bound (>=).
    # Every memem release since v1.5.0 failed CI because ruff's X.Y bumps (0.6→0.7,
    # etc.) introduce new lint rules into existing rule families (C4, SIM) that were
    # already selected in [tool.ruff.lint]. Compatible-release allows 0.6.x patch
    # fixes (bug fixes, rule refinements) while blocking 0.7+ which would add new
    # rules and break CI again. Same rationale applies to mypy minor bumps.
    "ruff~=0.6.0",
    "mypy~=1.11.0",
    "pre-commit>=3.8",
    # numpy required for cluster/embedding tests (and for the non-test embedding
    # code paths in attribution.py + dreamer.py). Production users opt into
    # numpy via the `embedding` extra, but CI tests need it directly. Without
    # this, every PR adding a numpy-using test had to hand-write
    # pytest.importorskip("numpy") — a recurring tax we paid in v1.3.0 + v1.4.0.
    "numpy>=1.24",
]
embedding = [
    "sentence-transformers>=2.2",
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/TT-Wang/memem"
Repository = "https://github.com/TT-Wang/memem"
Issues = "https://github.com/TT-Wang/memem/issues"
Changelog = "https://github.com/TT-Wang/memem/blob/master/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["memem"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "RET", "SIM"]
ignore = [
    "E501", "N806", "N803",
    "E402",   # module imports not at top — used for lazy/circular avoidance
    "E701",   # multiple statements on one line
    "B904",   # raise ... from err — style, not correctness
    "C401",   # set comprehension vs generator
    "SIM102", # nested-if readability preference
    "SIM105", # contextlib.suppress preference
    "SIM115", # context-handler preference
    "SIM117", # nested-with preference (often hurts readability with long enter exprs)
    "RET505", # else-after-return style preference
]

[tool.ruff.lint.per-file-ignores]
"memem/__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "slow: marks tests that download models or run heavy inference (deselect with '-m not slow')",
]
